# off_parser

./: .coveragerc  MANIFEST.in  README.md  requirements.txt  setup.cfg
docs/: Makefile  data.rst  index.rst  make.bat  parser.rst
examples/: toilet_ex1.py
off_parser/: __init__.py
off_parser/config/: _matplotlib.py
off_parser/data/: __init__.py  cube.off  loader.py  loader_test.py  toilet.off
off_parser/parser/: __init__.py  _plt.py  off_parser.py  off_parser_test.py
