[bdist_wheel]
universal = 1

[metadata]
project = OFF Parser
name = off_parser
version = 1.0.0
author = Matt Pewsey
copyright = 2019, Matt Pewsey
description = Parses .OFF (Object File Format) 3D model files to a class container.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/mpewsey/off_parser
keywords =
  3d-models
  parser
classifiers =
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy==1.14.5
  matplotlib==2.2.2
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  docutils==0.14
  numpydoc>=0.8.0
